# Azusa

./: .gitignore  .gitmodules  Cargo.toml  README.md  book.toml
.github/workflows/: book.yml
examples/: png.rs  window.rs
src/: font.rs  lib.rs
src/web/: mod.rs
src/window/: dx2d.rs  gdi.rs  mod.rs  xlib.rs
src_book/: SUMMARY.md  architecture.md  basic.md  intro.md  window.md
web-example/: Cargo.toml
web-example/src/: lib.rs
