[package]
name = "azusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
window = ["raw-window-handle","winapi"]
png = ["immo","dep:png"]

[dependencies]
raw-window-handle = { version = "0.5.0", optional = true }
png = { version = "0.17.7", optional = true}
immo = { version = "0.1.0", optional = true }
log = "0.4.17"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["winuser","windef","wingdi"], optional = true }

gdiplus = "0.0.2"
[dev-dependencies]
winit = "0.28.2"