[package]
name = "azusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["wasm-bindgen"]
window = ["raw-window-handle","winapi"]
png = ["immo","dep:png"]

[dependencies]
raw-window-handle = { version = "0.5.0", optional = true }
png = { version = "0.17.7", optional = true}
immo = { version = "0.1.0", optional = true }
log = "0.4.17"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["winuser","windef","wingdi"], optional = true }

[dev-dependencies]
winit = "0.28.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", optional = true}

[dependencies.web-sys]
version = "0.3.61"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
]