[package]
name = "my-site-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
azusa = { version = "0.1.0", features = ["web"], path = "../" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
]